<?xml version="1.0" encoding="utf-8"?>
<android.support.design.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="16dp"
    app:contentPadding="16dp"
    app:cardCornerRadius="20dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="12dp"
                android:clipToPadding="false"
                android:orientation="vertical">

                <android.support.design.button.MaterialButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_createName"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:textColor="#fff"
                    android:background="#AB47BC"/>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/name_text_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:errorEnabled="true"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlineBox">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/etHolidayName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/label_name"/>
                </android.support.design.widget.TextInputLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="1"
                    android:layout_marginBottom="20dp"
                    >

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:text="Multi Day"
                        android:textColor="#000"
                        android:textSize="16sp"/>

                    <Switch
                        android:id="@+id/swtMultiDay"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:clickable="true"
                        android:focusable="true"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textStyle="bold"/>

                </LinearLayout>

                <!--<Spinner
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlineBox">


                </Spinner>-->

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/lyStartDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:errorEnabled="true"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlineBox"
                    android:visibility="gone">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/etStartDate"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:focusableInTouchMode="false"
                        android:hint="@string/label_startDate"
                        android:drawableEnd="@drawable/ic_date"
                        android:drawableRight="@drawable/ic_date"/>
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/lyEndDate"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlineBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:errorEnabled="true"
                    android:visibility="gone">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/etEndDate"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:focusableInTouchMode="false"
                        android:hint="@string/label_endDate"
                        android:drawableEnd="@drawable/ic_date"
                        android:drawableRight="@drawable/ic_date"
                        />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/lyDate"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlineBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:errorEnabled="true"
                    android:visibility="visible">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/etDate"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/label_date"
                        android:focusableInTouchMode="false"
                        android:drawableEnd="@drawable/ic_date"
                        android:drawableRight="@drawable/ic_date" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.button.MaterialButton
                    android:id="@+id/btnChooseFile"
                    style="@style/Widget.MaterialComponents.Button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/label_choosePic"
                    android:visibility="gone"/>

            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</android.support.design.card.MaterialCardView>